--- a/DinoGame/index.html
+++ b/DinoGame/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <script>
+      setTimeout(()=>{
+        alert("Starts in 3 second")
+      },3000);
+    </script>
     <div class="game">
       <div id="dino"></div>
       <div id="cactus"></div>
@@ -14,3 +19,4 @@
     <script src="scripts.js"></script>
   </body>
 </html>
+ 
